--- a/gatitos.html
+++ b/gatitos.html
@@ -13,18 +13,7 @@
      > ^ <        > ^ <
     </pre>
     <pre>
-        /\___/\
-       (  o o  )
-       (  =^=  )
-        (---)
-       /     \
-      /       \
-     |         |
-     |    |    |
-      \   |   /
-       \  |  /
-        )___)
-       (_____)
+        SUPER GATO
     </pre>
 </body>
 </html>
